# python1

./: README.md  partI.py  pyproject.toml  run.py  setup.cfg
partII/: main_intro.py
tests/: test_matching.py  test_ui.py
vip_matchmaker/: README.md  __init__.py  api.py  matching.py  models.py  utils.py
vip_matchmaker.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
vip_matchmaker/static/: app.js  style.css
vip_matchmaker/templates/: index.html
