[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vip-matchmaker"
version = "0.1.0"
description = "Minimal VIP table matchmaking"
readme = "README.md"
requires-python = ">=3.8"
authors = [ { name = "Andrew Ludo" } ]
dependencies = ["Flask>=2.0"]
