[metadata]
name = vip-matchmaker
version = 0.1.0
description = Minimal VIP table matchmaking
long_description = file: README.md
long_description_content_type = text/markdown
author = Andrew Ludo
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
install_requires =
    Flask>=2.0
python_requires = >=3.8

[options.packages.find]
exclude =
    tests
